# aiosignalrcore

./: .bumpversion.cfg  .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: README.md  hubs.md  transport.md
signalrcore/hub/: base_hub_connection.py
signalrcore/protocol/: base_hub_protocol.py
src/aiosignalrcore/: __init__.py  client.py  client_stream.py  exceptions.py  handlers.py  helpers.py  hub_connection_builder.py  messages.py  subject.py  utils.py
src/aiosignalrcore/hub/: auth_hub_connection.py  base_hub_connection.py  errors.py  handlers.py
src/aiosignalrcore/messages/: base_message.py  cancel_invocation_message.py  close_message.py  completion_message.py  handshake.py  invocation_message.py  ping_message.py  stream_invocation_message.py  stream_item_message.py
src/aiosignalrcore/messages/handshake/: request.py  response.py
src/aiosignalrcore/protocol/: abstract.py  base_hub_protocol.py  json.py  json_hub_protocol.py  messagepack.py  messagepack_protocol.py
src/aiosignalrcore/transport/: abstract.py  base_transport.py  websocket.py  websockets.py
src/aiosignalrcore/transport/websockets/: reconnection.py  websocket_transport.py
test/: base_test_case.py  client_streaming_test.py  configuration_test.py  open_close_test.py  reconnection_test.py  send_auth_errors_test.py  send_auth_test.py  send_test.py  streaming_test.py
test/examples/: azure.py  chat.py  chat_auth.py  chat_auth_py2.py  chat_exception.py  chat_manual_reconnect.py  chat_msgpack.py  client_stream.py  disconnect.py  stream.py
tests/: base_test_case.py  client_streaming_test.py  configuration_test.py  open_close_test.py  reconnection_test.py  send_auth_errors_test.py  send_auth_test.py  send_test.py  streaming_test.py
tests/examples/: azure.py  chat.py  chat_auth.py  chat_auth_py2.py  chat_exception.py  chat_manual_reconnect.py  chat_msgpack.py  client_stream.py  disconnect.py  stream.py
tests/test_aiosignalrcore/: test_aiosignalrcore.py  test_utils.py
