[tool]
[tool.poetry]
name = "aiosignalrcore"
version = "0.9.2.1"
description = "Async fork of Python SignalR Core client(json and messagepack), with invocation auth and two way streaming. Compatible with azure / serverless functions. Also with automatic reconnect and manually reconnect."
keywords = ["asyncio", "signalr", "core", "client", "3.1"]
classifiers = ["Programming Language :: Python :: 3.6"]
homepage = "https://github.com/dipdup-net/aiosignalrcore"
authors = ["mandrewcito <anbaalo@gmail.com>"]
readme = "README.md"

packages = [
    { include = "aiosignalrcore", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
msgpack = "==1.0.2"
websockets = "^8.1"
aiohttp = "^3.7.4"
pyee = "^8.2.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
bump2version = "^1.0.1"
diff-cover = "^5.0.1"
isort = "^5.7.0"
mypy = "^0.900"
pytest = "^3.0"
pytest-cov = "^2.4"
flake8 = "3.9.0"
flakehell = "^0.9.0"
testcontainers = "^3.4.1"
types-tabulate = "^0.8.2"
types-pytz = "^2021.1.2"

[tool.isort]
line_length = 140

[tool.black]
line-length = 140
target-version = ['py38']
skip-string-normalization = true

[tool.flakehell]
format = "colored"
max_line_length = 140
show_source = true

[tool.flakehell.plugins]
pyflakes = ["+*"]
"flake8-*" = ["+*"]
flake8-docstrings = ["-*"]

[build-system]
requires = ["poetry_core>=1.0.0", "cryptography==3.3.2", "wheel"]
build-backend = "poetry.core.masonry.api"
