[tool]
[tool.poetry]
name = "aiosignalrcore"
version = "0.9.2.1"
description = "Async fork of Python SignalR Core client(json and messagepack), with invocation auth and two way streaming. Compatible with azure / serverless functions. Also with automatic reconnect and manually reconnect."
keywords = ["asyncio", "signalr", "core", "client", "3.1"]
classifiers = ["Programming Language :: Python :: 3.9"]
homepage = "https://github.com/dipdup-net/aiosignalrcore"
authors = ["mandrewcito <anbaalo@gmail.com>"]
readme = "README.md"

packages = [
    { include = "aiosignalrcore", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.0"
aiohttp = "^3.7.4"
msgpack = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
bump2version = "^1.0.1"
diff-cover = "^6.4.2"
isort = "^5.7.0"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "3.9.0"
flakehell = "^0.9.0"
testcontainers = "^3.4.1"
types-tabulate = "^0.8.3"
types-pytz = "^2021.3.0"

[tool.isort]
line_length = 140
force_single_line = true

[tool.black]
line-length = 140
target-version = ['py38']
skip-string-normalization = true

[tool.flakehell]
format = "colored"
max_line_length = 140
show_source = true

[tool.flakehell.plugins]
pyflakes = ["+*"]
"flake8-*" = ["+*"]
flake8-docstrings = ["-*"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
